secondfile/objects/DHStatus_Physical_Provisioning__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-PhysicalProvisioning</description>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus - Update Deal Hash Details</label>
        <referenceTo>DHStatus_Update_Deal_Hash_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Physical Provisionings</relationshipLabel>
        <relationshipName>DHStatus_Physical_Provisionings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus – Update IDH</label>
        <referenceTo>DHStatus_Update_IDH__c</referenceTo>
        <relationshipLabel>DHStatus-Physical Provisionings</relationshipLabel>
        <relationshipName>DHStatus_Physical_Provisionings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <formula>DHStatus_Update_Deal_Hash_Details__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedTimeStamp__c</fullName>
        <label>Last Modified Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>DHStatus-Physical Provisioning</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>DHStatus-Physical Provisioning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Physical Provisionings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>